--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@fontsource-variable/pixelify-sans": "^5.1.0",
     "@pixi/ui": "^2.1.5",
     "gsap": "^3.12.5",
     "miniplex": "^2.0.0",
